# MeloVST

./: .gitignore  Audio.md  CMakeLists.txt  README.md  buildMeloVSTReceive.sh
.run/: Debug Cubase.run.xml
MeloReceive/: Info.plist
MeloSend/: Info.plist  MeloVSTSend.entitlements
Source/: AudioSettings.h  Config.h  Constants.h  CrashHandler.h  MainApplication.cpp  MainApplication.h  MainAudioProcessor.cpp  MainAudioProcessor.h  Utils.h
Source/API/: ApiRoutes.h  AuthService.cpp  AuthService.h  MeloApiService.cpp  MeloApiService.h
Source/Api/: ApiRoutes.h  ApiService.cpp  ApiService.h  AuthService.cpp  AuthService.h  MeloApiService.cpp  MeloApiService.h  MeloWebRTCServerService.cpp  MeloWebRTCServerService.h  MeloWebSocketService.cpp  MeloWebSocketService.h  SocketEvents.h  SocketRoutes.h  WebSocketService.cpp  WebSocketService.h
Source/Common/: CircularBuffer.h  CrashHandler.h  EventListener.h  EventManager.h  Events.h  JuceLocalStorage.h  OpusCodecWrapper.h  OpusEncoderWrapper.h  OpusFileHandler.h  RTPWrapper.h  ReconnectTimer.h  ResamplerWrapper.h  WavFileHandler.h
Source/Debug/: AudioAppPlayer.cpp  AudioAppPlayer.h  DebugAudioAppPlayer.cpp  DebugAudioAppPlayer.h  DebugAudioCallback.h  DebugRTPWrapper.h  OpusFileHandler.h  WavFileHandler.h
Source/Encoders/: OpusCodecWrapper.h  OpusEncoderJuce.h
Source/Events/: EventListener.h  EventManager.h  Events.h
Source/Files/: OpusFileHandler.h  WavFileHandler.h
Source/GUI/: LoginPageComponent.cpp  LoginPageComponent.h  MainWindow.cpp  MainWindow.h
Source/Gui/: LoginPageComponent.cpp  LoginPageComponent.h  MainPageComponent.cpp  MainPageComponent.h  MainWindow.cpp  MainWindow.h
Source/Models/: Artist.h  Seller.h  Session.h  User.h  UserContext.h
Source/Rtc/: OpusCodecWrapper.h  OpusDecoderWrapper.h  OpusEncoderWrapper.h  RTPWrapper.h  WebRTCAudioReceiverService.cpp  WebRTCAudioReceiverService.h  WebRTCAudioSenderService.cpp  WebRTCAudioSenderService.h  WebRTCAudioService.cpp  WebRTCAudioService.h  WebRTCConfig.h  WebRTCConnexionHandler.cpp  WebRTCConnexionHandler.h  WebRTCConnexionState.cpp  WebRTCConnexionState.h  WebRTCReceiverConnexionHandler.cpp  WebRTCSenderConnexionHandler.cpp  WebRTCSenderConnexionHandler.h  WebRTCServerService.cpp  WebRTCServerService.h  rtc_config.ini
Source/RtcReceiver/: WebRTCAudioReceiverService.cpp  WebRTCAudioReceiverService.h  WebRTCReceiverConnexionHandler.cpp  WebRTCReceiverConnexionHandler.h
Source/RtcSender/: WebRTCAudioSenderService.cpp  WebRTCAudioSenderService.h  WebRTCSenderConnexionHandler.cpp  WebRTCSenderConnexionHandler.h
Source/Socket/: SocketEvents.h  SocketRoutes.h  WebSocketService.cpp  WebSocketService.h
Source/SocketEvents/: SocketEvents.h
Source/Utils/: AudioSettings.h  AudioUtils.h  CircularBuffer.h  Constants.h  FileUtils.h  JuceLocalStorage.h  RTCUtils.h  ReconnectTimer.h  ResamplerWrapper.h  StringUtils.h  VectorUtils.h
Tests/: CMakeLists.txt  OpusCodecWrapperTest.cpp  OpusFileHandlerTest.cpp  RTPWrapperTest.cpp  TestMain.cpp  WavFileHandlerTest.cpp
